--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
                     <div class="col col-md-auto mr-5">
                         <h6 class="font-weight-bold footer-ul">COMPANY</h6>
                         <ul class="list-unstyled mt-3">
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">About us</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Certification</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Customer Stories</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Partners</a>
                             </li>
                         </ul>
@@ -319,16 +319,16 @@
                     <div class="col col-md-auto mr-5">
                         <h6 class="font-weight-bold footer-ul">ABOUT</h6>
                         <ul class="list-unstyled mt-3">
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Privacy Policy</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Cookie Policy</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Terms of Use</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">FAQ</a>
                             </li>
                         </ul>
@@ -340,13 +340,13 @@
                             GET IN TOUCH
                         </h6>
                         <ul class="list-unstyled mt-3">
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Contact us</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Jobs</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Locations</a>
                             </li>
                         </ul>
@@ -358,22 +358,22 @@
                             TECHNICAL SUPPORT
                         </h6>
                         <ul class="list-unstyled mt-3">
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Incident?</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Communities</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Contact Support</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Customer Portal</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Documentation Portal</a>
                             </li>
-                            <li class="">
+                            <li class="mb-2">
                                 <a class="footer-links" href="#">Report Security Issue</a>
                             </li>
                         </ul>
@@ -413,7 +413,23 @@
         <!-- End Upper Container -->
 
         <!-- Lower Container -->
-        <div></div>
+        <div class="container-fluid mt-5 mb-5 px-0">
+            <div class="row">
+                <div class="col-sm-6 px-0">
+                    <p class="mb-0">
+                        <span class="mr-2 footer-bottom-grail" style="color: #000F14;">GRAIL</span><span class="footer-bottom-grail" style="color: #BDBDBD;">CYBERTECH</span>
+                    </p>
+                    <p class="footer-bottom-copyright">
+                        &copy; Grail 2021. All rights reserved
+                    </p>
+                </div>
+                <div class="col-sm-6 px-0">
+                    <p class="footer-bottom-text">
+                        SECURITY FOR EVERYONE
+                    </p>
+                </div>
+            </div>
+        </div>
         <!-- End Lower Container -->
     </footer>
     <!-- End footer -->
