--- a/index.html
+++ b/index.html
@@ -350,13 +350,105 @@
         </div>
     </section>
     <section>
-        <div style="background-color: grey; width: 100%; min-height: 100vh"></div>
-    </section>
-    <section>
         <div style="background-color: white; width: 100%; min-height: 100vh"></div>
     </section>
     <section>
-        <div style="background-color: grey; width: 100%; min-height: 100vh"></div>
+        <div style="background-color: #BDBDBD; width: 100%; min-height: 100vh">
+            <div class="pt-5 text-center">
+                <h1 class="">Our Partners</h1>
+                <p>We've been working with national and international teams</p>
+            </div>
+
+            <div class="container text-center" style="margin-top:50px;">
+                <div class="row mb-4">
+                    <div class="col-sm-12 d-flex justify-content-center">
+                        <div class="partner-box">
+                            <div class="partner">
+                                <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
+                                <span class="partner-text-kaspersky">Kaspersky</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-sm-6 pr-5">
+                        <div class="partner-box float-right">
+                            <div class="partner">
+                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                                <span class="partner-text-pimec">Pimec</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 pl-5">
+                        <div class="partner-box float-left">
+                            <div class="partner">
+                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                                <span class="partner-text-upc">UPC</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-sm-4">
+                        <div class="partner-box float-right">
+                            <div class="partner">
+                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                                <span class="partner-text-pimec">Pimec</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 d-flex no-wrap justify-content-center">
+                        <div class="partner-box">
+                            <div class="partner">
+                                <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
+                                <span class="partner-text-kaspersky">Kaspersky</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="partner-box float-left">
+                            <div class="partner">
+                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                                <span class="partner-text-upc">UPC</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-sm-6 pr-5">
+                        <div class="partner-box float-right">
+                            <div class="partner">
+                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                                <span class="partner-text-pimec">Pimec</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 pl-5">
+                        <div class="partner-box float-left">
+                            <div class="partner">
+                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                                <span class="partner-text-upc">UPC</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 d-flex no-wrap justify-content-center">
+                        <div class="partner-box">
+                            <div class="partner">
+                                <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
+                                <span class="partner-text-kaspersky">Kaspersky</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
+
+        </div>
+    </section>
+    <section>
+        <div style="background-color: white; width: 100%; min-height: 100vh"></div>
     </section>
 
     <!-- Start footer -->
