partners bien centrados

--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" <<<<<<< HEAD
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    =======
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
-    >>>>>>> master
 
     <script src="main.js"></script>
 </head>
@@ -595,15 +588,15 @@
     <section>
         <div style="background-color: #BDBDBD; width: 100%; min-height: 100vh">
             <div class="pt-5 text-center">
-                <h1 class="">Our Partners</h1>
-                <p>We've been working with national and international teams</p>
+                <h1 class="partner-title">Our Partners</h1>
+                <p class="partner-text">We've been working with national and international teams</p>
             </div>
 
             <div class="container text-center" style="margin-top:50px;">
                 <div class="row mb-4">
                     <div class="col-sm-12 d-flex justify-content-center">
-                        <div class="partner-box">
-                            <div class="partner">
+                        <div class="partner-box d-flex align-items-center">
+                            <div class="container">
                                 <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
                                 <span class="partner-text-kaspersky">Kaspersky</span>
                             </div>
@@ -612,17 +605,17 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-sm-6 pr-5">
-                        <div class="partner-box float-right">
-                            <div class="partner">
-                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-right d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/pimec.svg" alt="Pimec" width="38px">
                                 <span class="partner-text-pimec">Pimec</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 pl-5">
-                        <div class="partner-box float-left">
-                            <div class="partner">
-                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-left d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/upc.gif" alt="UPC" width="38px">
                                 <span class="partner-text-upc">UPC</span>
                             </div>
                         </div>
@@ -630,25 +623,25 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-sm-4">
-                        <div class="partner-box float-right">
-                            <div class="partner">
-                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-right d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/pimec.svg" alt="Pimec" width="38px">
                                 <span class="partner-text-pimec">Pimec</span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 d-flex no-wrap justify-content-center">
-                        <div class="partner-box">
-                            <div class="partner">
+                    <div class="col-sm-4 d-flex justify-content-center">
+                        <div class="partner-box d-flex align-items-center">
+                            <div class="container">
                                 <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
                                 <span class="partner-text-kaspersky">Kaspersky</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="partner-box float-left">
-                            <div class="partner">
-                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-left d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/upc.gif" alt="UPC" width="38px">
                                 <span class="partner-text-upc">UPC</span>
                             </div>
                         </div>
@@ -656,26 +649,26 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-sm-6 pr-5">
-                        <div class="partner-box float-right">
-                            <div class="partner">
-                                <img src="./assets/img/partners/pimec.svg" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-right d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/pimec.svg" alt="Pimec" width="38px">
                                 <span class="partner-text-pimec">Pimec</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 pl-5">
-                        <div class="partner-box float-left">
-                            <div class="partner">
-                                <img src="./assets/img/partners/upc.gif" alt="Kaspersky" width="38px">
+                        <div class="partner-box float-left d-flex align-items-center">
+                            <div class="container">
+                                <img src="./assets/img/partners/upc.gif" alt="UPC" width="38px">
                                 <span class="partner-text-upc">UPC</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 d-flex no-wrap justify-content-center">
-                        <div class="partner-box">
-                            <div class="partner">
+                    <div class="col-sm-12 d-flex justify-content-center">
+                        <div class="partner-box d-flex align-items-center">
+                            <div class="container">
                                 <img src="./assets/img/partners/kaspersky.png" alt="Kaspersky" width="38px">
                                 <span class="partner-text-kaspersky">Kaspersky</span>
                             </div>
