--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" <<<<<<< HEAD
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-    =======
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
-    >>>>>>> master
 
     <script src="main.js"></script>
 </head>
@@ -689,7 +682,15 @@
         </div>
     </section>
     <section>
-        <div style="background-color: white; width: 100%; min-height: 100vh"></div>
+        <div style="background-color: white; min-height: 25vh;" class="d-flex align-items-center w-100">
+            <div class="container">
+                <div class="pt-5 text-center">
+                    <h1 class="">Our Partners</h1>
+                    <p>We've been working with national and international teams</p>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <!-- Start footer -->
