--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="https://kit.fontawesome.com/7f7a5c4796.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
@@ -60,7 +60,7 @@
 
                 <ul class="navbar-nav float-sm-right">
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">LOCATION<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./locations.html">LOCATION<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#">CONTACT US</a>
@@ -825,8 +825,8 @@
             <div class="row">
                 <div class="col-sm-6 px-0">
                     <p class="mb-0">
-                        <span class="mr-2 footer-bottom-grail" style="color: #000F14;">GRAIL</span><span
-                            class="footer-bottom-grail" style="color: #BDBDBD;">CYBERTECH</span>
+                        <span class="mr-2 footer-bottom-grail" style="color: #000F14;">GRAIL</span>
+                        <span class="footer-bottom-grail" style="color: #BDBDBD;">CYBERTECH</span>
                     </p>
                     <p class="footer-bottom-copyright">
                         &copy; Grail 2021. All rights reserved
