--- a/locations.html
+++ b/locations.html
@@ -8,18 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/locations.css" />
-    <script src="https://kit.fontawesome.com/7f7a5c4796.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
-
+    
+    <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
-
+    <!-- Icon Library FontAwesome-->
+    <script src="https://kit.fontawesome.com/7f7a5c4796.js" crossorigin="anonymous"></script>
+    <!-- Font Nunito-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- JS -->
     <script src="main.js"></script>
 </head>
 
@@ -33,15 +39,15 @@
 
             <a class="navbar-brand mx-auto d-sm-none" href="#">
                 <div class="d-flex flex-column align-items-center">
-                    <p class="header-title">GRAIL</p>
-                    <p class="header-subtitle">CYBER TECH</p>
+                    <div class="header-title">GRAIL</div>
+                    <div class="header-subtitle">CYBER TECH</div>
                 </div>
             </a>
             <div class="clearfix collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav float-sm-left">
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#">SERVICES
-                            <span class="sr-only">(current)</span></a>
+                        </a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#">ABOUT US</a>
@@ -52,16 +58,16 @@
                 </ul>
                 <div></div>
 
-                <a class="navbar-brand mx-auto d-none d-sm-block" href="#">
-                    <div class="d-flex flex-column align-items-center">
-                        <p class="header-title">GRAIL</p>
-                        <p class="header-subtitle">CYBER TECH</p>
+                <a class="navbar-brand mx-auto d-none d-sm-block" href="./index.html">
+                    <div class="d-flex flex-column align-items-center header-logo">
+                        <div class="header-title">GRAIL</div>
+                        <div class="header-subtitle">CYBER TECH</div>
                     </div>
                 </a>
 
                 <ul class="navbar-nav float-sm-right">
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">LOCATION<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./locations.html">LOCATION<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#">CONTACT US</a>
@@ -105,7 +111,7 @@
                     <div class="text-center">
                         <h3 class="mt-5">BARCELONA</h3>
                         <p class="locations-bottom-title">Edificis Trade<p>
-                        <p class="text-description">Gran Via Carles II 94 Planta 10, 08028</p>
+                        <p class="text-description" style="margin-top:-10px;">Gran Via Carles II 94 Planta 10, 08028</p>
                         <h3 class="">GOOGLE MAPS</h3>
                     </div>
                 </div>
@@ -115,7 +121,7 @@
                     <div class="text-center">
                         <h3 class="mt-5">BARCELONA</h3>
                         <p class="locations-bottom-title">Parc UPC K2M<p>
-                        <p class="text-description">Carrer de Jordi Girona 1 Planta 1, 08034</p>
+                        <p class="text-description" style="margin-top:-10px;">Carrer de Jordi Girona 1 Planta 1, 08034</p>
                         <h3 class="">GOOGLE MAPS</h3>
                     </div>
                 </div>
